Callback client code in place but not tested
